Tox - Added mypy check.

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{36, 37, 38}, flake8, pydoc
+envlist = py{36, 37, 38}, flake8, pydoc, mypy
 skip_missing_interpreters = true
 
 [testenv]
@@ -27,6 +27,10 @@ deps = flake8
 
 commands = flake8 --docstring-convention google --ignore D212,W503
 
+[testenv:mypy]
+deps = mypy
+
+commands = mypy --python-version 3.8 {toxinidir}/slxjsonrpc
 
 [flake8]
 exclude =
@@ -50,4 +54,4 @@ max-line-length = 120
 python =
   3.6: py36
   3.7: py37
-  3.8: py38, pydoc, flake8
+  3.8: py38, pydoc, flake8, mypy
