Tox - removed test for python 3.7, since it should not be needed with 3.6 & 3.8 been tested.

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{36, 37, 38}, flake8, pydoc, mypy
+envlist = py{36, 38}, flake8, pydoc, mypy
 skip_missing_interpreters = true
 
 [testenv]
@@ -38,10 +38,6 @@ exclude =
     .eggs,
     .git,
     __pycache__,
-    wappsto/docs/source/conf.py,
-    wappsto/build,
-    UNNEEDED,
-    exampleValues,
     *.pyc,
     *.egg-info,
     setup.py
@@ -53,5 +49,4 @@ max-line-length = 120
 [travis]
 python =
   3.6: py36
-  3.7: py37
   3.8: py38, pydoc, flake8, mypy
