slxJsonRpc - Added Bulk parser handling & Basic testing. + Tryed to hit some of the Type hinting Error.

--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@ deps = pytest
     mock
 
 commands =
-    coverage run --source slxjsonrpc -m pytest test/schematest.py -vv
+    ; coverage run --source slxjsonrpc -m pytest test/schematest.py -vv
     coverage run --source slxjsonrpc -m pytest test/jsonrpctest.py -vv
     coverage report --omit='.tox/*' -m
     coverage html --omit='.tox/*'
