--- a/tox.ini
+++ b/tox.ini
@@ -30,7 +30,7 @@ commands = flake8 --docstring-convention google --ignore D212,W503
 [testenv:mypy]
 deps = mypy
 
-commands = mypy --python-version 3.8 {toxinidir}/slxjsonrpc
+commands = mypy --strict --python-version 3.8 {toxinidir}/slxjsonrpc
 
 [flake8]
 exclude =
