--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 mypy flake8-docstrings
+        pip install flake8 mypy flake8-docstrings pydantic
 
     - name: Analysing the code with flake8
       run: flake8 --docstring-convention google --ignore D212,W503  $(git ls-files 'slxjsonrpc/*.py')
