Tox - Added generation af json for codecov upload.

--- a/tox.ini
+++ b/tox.ini
@@ -11,6 +11,7 @@ deps = pytest
 commands =
     coverage run --source slxjsonrpc -m pytest test/schematest.py test/jsonrpctest.py -vv
     coverage report --omit='.tox/*' -m
+    coverage json --omit='.tox/*'
     coverage html --omit='.tox/*'
 
 
