Makefile - Fix the setup task.

--- a/tox.ini
+++ b/tox.ini
@@ -43,6 +43,7 @@ exclude =
     setup.py
     *main.py
     build
+    env
 max-line-length = 120
 
 ;Installing old python vr. in ubunut: https://askubuntu.com/a/1232306/910597
