--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 cmake==3.27.0
-flake8==6.1.0
 flake8-docstrings==1.7.0
+flake8==6.1.0
 mypy==1.4.1
 pydantic==2.1.1
 tox==4.6.4
+twine==4.0.2
 wheel==0.41.0
