Test - update the structure.

--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@ deps = pytest
     mock
 
 commands =
-    coverage run --source slxjsonrpc -m pytest test/schematest.py test/jsonrpctest.py -vv
+    coverage run --source slxjsonrpc -m pytest test/ -vv
     coverage report --omit='.tox/*' -m
     coverage json --omit='.tox/*'
     coverage html --omit='.tox/*'
