Test - Added test for python version: 3.8, 3.9 & 3.11

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{37, 310}, flake8, pydoc, mypy
+envlist = py{37, 38, 39, 310, 311}, flake8, pydoc, mypy
 skip_missing_interpreters = true
 
 [testenv]
@@ -50,4 +50,7 @@ max-line-length = 120
 [travis]
 python =
   3.7: py37
-  3.10: py310, pydoc, flake8, mypy
+  3.8: py38
+  3.9: py39
+  3.10: py310
+  3.11: py311, pydoc, flake8, mypy
